--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
   <div class="container">
     <header class="hero">
+      <div class="theme-toggle">
+        <button id="theme-btn" aria-label="Toggle Theme">
+          <span class="mode-icon">🌙</span>
+        </button>
+      </div>
       <h1>💰 이번 주 로또 번호 추천 💰</h1>
       <p>행운의 숫자를 지금 바로 확인해보세요!</p>
     </header>
